-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.6.3, 6.7.0
-
None
-
-
31f9f80ad (dev), 8e61693be (6.8), ce35edf20 (6.7)
To reproduce:
- build the following test app with default options: https://github.com/kambala-decapitator/qt-inside-ios-native
- press the only button in the app
- observe the message in the console log
Tested on Simulator in Xcode 15.2 / 15.4
| For Gerrit Dashboard: QTBUG-125479 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 566303,2 | iOS: Reflect QScreen DPR if UIView has not been added to a UISCreen yet | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 566704,2 | iOS: Reflect QScreen DPR if UIView has not been added to a UISCreen yet | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
| 566813,2 | iOS: Reflect QScreen DPR if UIView has not been added to a UISCreen yet | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |